--- a/composer.json
+++ b/composer.json
@@ -6,21 +6,27 @@
     "homepage": "http://www.doctrine-project.org",
     "license": "MIT",
     "authors": [
-        {"name": "Guilherme Blanco", "email": "guilhermeblanco@gmail.com"}
+        {
+            "name": "Guilherme Blanco",
+            "email": "guilhermeblanco@gmail.com"
+        }
     ],
     "require": {
-        "php": ">=5.3.2"
+        "php": "~7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "^5.1.3",
         "satooshi/php-coveralls": "~0.6"
     },
     "autoload": {
         "psr-0": { "Doctrine\\Cache\\": "lib/" }
     },
+    "autoload-dev": {
+        "psr-0": { "Doctrine\\Test\\Cache\\": "tests/" }
+    },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.x-dev"
+            "dev-master": "2.0.x-dev"
         }
     }
 }
