--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit backupGlobals="false"
-         backupStaticAttributes="false"
-         colors="true"
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd"
+         bootstrap="vendor/autoload.php"
          convertErrorsToExceptions="true"
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true"
-         processIsolation="false"
+         colors="true"
+         verbose="true"
          stopOnFailure="false"
-         syntaxCheck="false"
-         bootstrap="./tests/Doctrine/Tests/TestInit.php">
+         processIsolation="false"
+         backupGlobals="false"
+         syntaxCheck="true"
+         columns="max"
+>
+    <php>
+        <ini name="error_reporting" value="-1" />
+    </php>
 
     <testsuites>
         <testsuite name="Doctrine Cache Test Suite">
